getting formatting right

--- a/index.html
+++ b/index.html
@@ -1,10 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>JG680 - Join Our Team</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </head>
 <body>
-    <p>hello</p>
+<section class="section">
+    <div class="container">
+        <div class="tile is-child notification is-info">
+            <h1 class="title">We're recruiting for COMP6000!</h1>
+        </div>
+
+        <section class="section is-medium">
+            <h2 class="title is-spaced">Introduction</h2>
+            <h3 class="subtitle">
+                Are you a motivated and hardworking individual who is tired of being in “solo” groups where you feel like you are the only one doing any work? Well, we’re looking for you!
+            </h3>
+            <h3 class="subtitle">
+                We are a laidback group who are trying to achieve the best possible grade for our degree. We understand that everyone has their strengths and weaknesses, and we want to use our individual strengths to make the team stronger by bouncing ideas off each other; sharing thoughts that we had not yet considered; and introducing a language or concept that opens a blocked passage.
+            </h3>
+            <h3 class="subtitle">
+                You do not need to be an expert programmer to join our team. We instead are looking for someone who can work independently to resolve a problem, and know when to escalate or ask for help when needed.  Someone who is motivated to improve, to see a problem and think: “this could be better”, to know: “I do not quite understand this, I am going to learn how this works”; someone who is open-minded to others' ideas and new technologies. But most of all, to strive to do their very best to get the highest mark that they can possibly attain. We want to support each other so that we can all succeed, but only if you are willing to put in your weight.
+            </h3>
+        </section>
+
+    </div>
+</section>
 </body>
 </html>
