other sections added

--- a/index.html
+++ b/index.html
@@ -13,16 +13,56 @@
             <h1 class="title">We're recruiting for COMP6000!</h1>
         </div>
 
-        <section class="section is-medium">
+        <section class="section">
             <h2 class="title is-spaced">Introduction</h2>
             <h3 class="subtitle">
-                Are you a motivated and hardworking individual who is tired of being in “solo” groups where you feel like you are the only one doing any work? Well, we’re looking for you!
+                Are you a motivated and hardworking individual who is tired of being in “solo” groups where you feel
+                like you are the only one doing any work? Well, we’re looking for you!
             </h3>
             <h3 class="subtitle">
-                We are a laidback group who are trying to achieve the best possible grade for our degree. We understand that everyone has their strengths and weaknesses, and we want to use our individual strengths to make the team stronger by bouncing ideas off each other; sharing thoughts that we had not yet considered; and introducing a language or concept that opens a blocked passage.
+                We are a laid-back group who are trying to achieve the best possible grade for our degree.
+                We understand that everyone has their strengths and weaknesses, and we want to use our individual
+                strengths to make the team stronger by bouncing ideas off each other; sharing thoughts that we had not
+                yet considered; and introducing a language or concept that opens a blocked passage.
             </h3>
             <h3 class="subtitle">
-                You do not need to be an expert programmer to join our team. We instead are looking for someone who can work independently to resolve a problem, and know when to escalate or ask for help when needed.  Someone who is motivated to improve, to see a problem and think: “this could be better”, to know: “I do not quite understand this, I am going to learn how this works”; someone who is open-minded to others' ideas and new technologies. But most of all, to strive to do their very best to get the highest mark that they can possibly attain. We want to support each other so that we can all succeed, but only if you are willing to put in your weight.
+                You do not need to be an expert programmer to join our team. We instead are looking for someone who
+                can work independently to resolve a problem, and know when to escalate or ask for help when needed.
+                Someone who is motivated to improve, to see a problem and think: “this could be better”,
+                to know: “I do not quite understand this, I am going to learn how this works”; someone who is
+                open-minded to others' ideas and new technologies. But most of all, to strive to do their very best
+                to get the highest mark that they can possibly attain. We want to support each other so that we can
+                all succeed, but only if you are willing to put in your weight.
+            </h3>
+        </section>
+
+        <section class="section">
+            <h2 class="title is-spaced">Technical</h2>
+            <h3 class="subtitle">
+                Although we have not yet decided on a project initiative, being familiar with Java is a must,
+                alongside Gitlab, Git, and a database language (SQL). If you have any weaknesses with these we
+                expect you to let us know so we can provide training if required. Commits should be well named,
+                small, and frequent.
+            </h3>
+        </section>
+
+        <section class="section">
+            <h2 class="title is-spaced">Requirements</h2>
+            <h3 class="subtitle">
+                Excellent communication skills: we will be using WhatsApp, email, and weekly in-person meetings
+                for our communication.
+            </h3>
+            <h3 class="subtitle">
+                Time management skills: to meet our deadlines, a feature may require your part to be completed before
+                another team member can progress, thus we need to be able to set you a task and know that it will be
+                completed by the set time. If not, we need to know that you can communicate the problem or when the
+                completion of the feature may be expected.
+            </h3>
+            <h3 class="subtitle">
+                Clean code principles: we are looking for someone who can follow good naming practices, to have
+                “self-documenting” code where the variable and method names are clear, and understandable and know
+                when to skillfully add comments. Code quality should be your priority and to not be afraid to refactor
+                when code starts to smell.
             </h3>
         </section>
 
