--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </head>
 <body>
+<header>
+    <div class="notification is-info">
+        <h1 class="title has-text-centered">We're recruiting for COMP6000!</h1>
+    </div>
+</header>
 <section class="section">
     <div class="container">
-        <div class="tile is-child notification is-info">
-            <h1 class="title">We're recruiting for COMP6000!</h1>
-        </div>
-
         <section class="section">
             <h2 class="title is-spaced">Introduction</h2>
             <h3 class="subtitle">
@@ -35,7 +36,6 @@
                 all succeed, but only if you are willing to put in your weight.
             </h3>
         </section>
-
         <section class="section">
             <h2 class="title is-spaced">Technical</h2>
             <h3 class="subtitle">
@@ -45,7 +45,6 @@
                 small, and frequent.
             </h3>
         </section>
-
         <section class="section">
             <h2 class="title is-spaced">Requirements</h2>
             <h3 class="subtitle">
@@ -65,7 +64,6 @@
                 when code starts to smell.
             </h3>
         </section>
-
     </div>
 </section>
 </body>
