more text and formatting

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </header>
 <section class="section">
     <div class="container">
-        <section class="section">
+        <section class="section pb-2">
             <h2 class="title is-spaced">Introduction</h2>
             <h3 class="subtitle">
                 Are you a motivated and hardworking individual who is tired of being in “solo” groups where you feel
@@ -36,7 +36,7 @@
                 all succeed, but only if you are willing to put in your weight.
             </h3>
         </section>
-        <section class="section">
+        <section class="section pb-2">
             <h2 class="title is-spaced">Technical</h2>
             <h3 class="subtitle">
                 Although we have not yet decided on a project initiative, being familiar with Java is a must,
@@ -45,7 +45,7 @@
                 small, and frequent.
             </h3>
         </section>
-        <section class="section">
+        <section class="section pb-2">
             <h2 class="title is-spaced">Requirements</h2>
             <h3 class="subtitle">
                 Excellent communication skills: we will be using WhatsApp, email, and weekly in-person meetings
@@ -62,6 +62,28 @@
                 “self-documenting” code where the variable and method names are clear, and understandable and know
                 when to skillfully add comments. Code quality should be your priority and to not be afraid to refactor
                 when code starts to smell.
+            </h3>
+        </section>
+        <section class="section pb-2">
+            <h2 class="title is-spaced">Desirable Skills</h2>
+            <div class="content is-medium">
+                <ul>
+                    <li>Expected to achieve a merit or greater for the second year.</li>
+                    <li>Proficient in solving problems through the use of Google, Udemy, Youtube, etc.</li>
+                    <li>Experience of working on personal projects and achieving a personal goal.</li>
+                    <li>Any artistic skills such as Graphic Design and experience with a design tool such as Photoshop, InDesign, GIMP, etc.</li>
+                    <li>Able to work as a team and build a rapport with other team members.</li>
+                    <li>Motivated to keep going even when the problem consumes your very being.</li>
+                </ul>
+            </div>
+        </section>
+        <section class="section pb-2">
+            <h2 class="title is-spaced">Contact</h2>
+            <h3 class="subtitle">
+                If you are interested in joining our group then please send me a message on WhatsApp using this
+                <a href="https://api.whatsapp.com/send?phone=7788274558">link</a>,
+                or alternatively send me an
+                <a href="mailto:jg680@kent.ac.uk">email</a> and let's find out if we’re a good match!
             </h3>
         </section>
     </div>
