about the team section added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>JG680 - Join Our Team</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
 </head>
 <body>
@@ -85,6 +86,72 @@
                 or alternatively send me an
                 <a href="mailto:jg680@kent.ac.uk">email</a> and let's find out if we’re a good match!
             </h3>
+        </section>
+        <section class="section pb-2">
+            <h2 class="title is-spaced">The Team</h2>
+            <div class="columns">
+                <div class="column">
+                    <div class="box">
+                        <div class="columns">
+                            <div class="column is-one-quarter">
+                                <figure class="image">
+                                    <img class="is-rounded" src="https://media-exp1.licdn.com/dms/image/C4D03AQGhG4VF-s48Pw/profile-displayphoto-shrink_200_200/0/1604920417100?e=1655337600&v=beta&t=sxeOOHyQ1rDV3yj4bogYjEaToi-3X504-b01zrn7Ju0">
+                                </figure>
+                            </div>
+                            <div class="column">
+                                <div class="is-flex is-justify-content-space-between pb-1">
+                                    <h4 class="subtitle has-text-weight-bold mb-1">James Geer</h4>
+                                    <div>
+                                        <a href="https://github.com/jamesgeer">
+                                            <span class="icon">
+                                              <i class="fa-brands fa-github"></i>
+                                            </span>
+                                        </a>
+                                        <a href="https://www.linkedin.com/in/james-geer-b35527124/">
+                                            <span class="icon">
+                                              <i class="fa-brands fa-linkedin"></i>
+                                            </span>
+                                        </a>
+                                    </div>
+                                </div>
+                                <p>
+                                    I have over four years experience working as a Full-stack developer at a Web Agency
+                                    and two of those years I spent as a Graphic Designer. I grew to love coding after
+                                    suffering at its wrath for so long, and now I’m addicted.
+                                    Talk to me about Japan/coffee/coding or Elden Ring.
+                                </p>
+                            </div>
+                        </div>
+                        <hr class="my-3">
+                        <p class="pt-1">Java, PHP, JavaScript, Go, Postgresql</p>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="box">
+                        <div class="columns">
+                            <div class="column is-one-quarter">
+                                <figure class="image">
+                                    <img class="is-rounded" src="https://pps.whatsapp.net/v/t61.24694-24/161327510_6096845417024669_8606270748330692273_n.jpg?ccb=11-4&oh=f01ffba4b076ce5b45a2e70f1b4fea42&oe=6264CB70">
+                                </figure>
+                            </div>
+                            <div class="column">
+                                <div class="is-flex is-justify-content-space-between pb-1">
+                                    <h4 class="subtitle has-text-weight-bold mb-1">Isabel Bradley</h4>
+                                    <div></div>
+                                </div>
+                                <p>
+                                    I started programming just before starting this degree and before that,
+                                    I worked as a specialist in a bank. I spend all my free time indoors on a laptop
+                                    (for better or worse) and I’m looking forward to learning some Python
+                                    over the summer.
+                                </p>
+                            </div>
+                        </div>
+                        <hr class="my-3">
+                        <p class="pt-1">Java, PHP, JavaScript, CSS/HTML</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
 </section>
