requirements to required skills and bullet pointed

--- a/index.html
+++ b/index.html
@@ -47,23 +47,27 @@
             </h3>
         </section>
         <section class="section pb-2">
-            <h2 class="title is-spaced">Requirements</h2>
-            <h3 class="subtitle">
-                Excellent communication skills: we will be using WhatsApp, email, and weekly in-person meetings
-                for our communication.
-            </h3>
-            <h3 class="subtitle">
-                Time management skills: to meet our deadlines, a feature may require your part to be completed before
-                another team member can progress, thus we need to be able to set you a task and know that it will be
-                completed by the set time. If not, we need to know that you can communicate the problem or when the
-                completion of the feature may be expected.
-            </h3>
-            <h3 class="subtitle">
-                Clean code principles: we are looking for someone who can follow good naming practices, to have
-                “self-documenting” code where the variable and method names are clear, and understandable and know
-                when to skillfully add comments. Code quality should be your priority and to not be afraid to refactor
-                when code starts to smell.
-            </h3>
+            <h2 class="title is-spaced">Required Skills</h2>
+            <div class="content is-medium">
+                <ul>
+                    <li>
+                        Excellent communication skills: we will be using WhatsApp, email, and weekly in-person meetings
+                        for our communication.
+                    </li>
+                    <li>
+                        Time management skills: to meet our deadlines, a feature may require your part to be completed before
+                        another team member can progress, thus we need to be able to set you a task and know that it will be
+                        completed by the set time. If not, we need to know that you can communicate the problem or when the
+                        completion of the feature may be expected.
+                    </li>
+                    <li>
+                        Clean code principles: we are looking for someone who can follow good naming practices, to have
+                        “self-documenting” code where the variable and method names are clear, and understandable and know
+                        when to skillfully add comments. Code quality should be your priority and to not be afraid to refactor
+                        when code starts to smell.
+                    </li>
+                </ul>
+            </div>
         </section>
         <section class="section pb-2">
             <h2 class="title is-spaced">Desirable Skills</h2>
