footer added, changed some text and grammar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <header>
     <div class="notification is-info">
-        <h1 class="title has-text-centered">We're recruiting for COMP6000!</h1>
+        <h1 class="title has-text-centered">We're recruiting for COMP6000! 2022/23</h1>
     </div>
 </header>
 <section class="section">
@@ -73,7 +73,7 @@
             <h2 class="title is-spaced">Desirable Skills</h2>
             <div class="content is-medium">
                 <ul>
-                    <li>Expected to achieve a merit or greater for the second year.</li>
+                    <li>Expected to achieve a merit or higher for the second year.</li>
                     <li>Proficient in solving problems through the use of Google, Udemy, Youtube, etc.</li>
                     <li>Experience of working on personal projects and achieving a personal goal.</li>
                     <li>Any artistic skills such as Graphic Design and experience with a design tool such as Photoshop, InDesign, GIMP, etc.</li>
@@ -87,7 +87,7 @@
             <h3 class="subtitle">
                 If you are interested in joining our group then please send me a message on WhatsApp using this
                 <a href="https://api.whatsapp.com/send?phone=7788274558">link</a>,
-                or alternatively send me an
+                or alternatively, send me an
                 <a href="mailto:jg680@kent.ac.uk">email</a> and let's find out if we’re a good match!
             </h3>
         </section>
@@ -119,15 +119,15 @@
                                     </div>
                                 </div>
                                 <p>
-                                    I have over four years experience working as a Full-stack developer at a Web Agency
-                                    and two of those years I spent as a Graphic Designer. I grew to love coding after
-                                    suffering at its wrath for so long, and now I’m addicted.
-                                    Talk to me about Japan/coffee/coding or Elden Ring.
+                                    I have over four years of experience working as a Full-stack developer at a
+                                    Web Agency and two of those years I spent as a Graphic Designer. I grew to love
+                                    coding after suffering at its wrath for so long, and now I’ve been consumed by it.
+                                    Talk to me about functional programming, Japan or how much you hate JavaScript.
                                 </p>
                             </div>
                         </div>
                         <hr class="my-3">
-                        <p class="pt-1">Java, PHP, JavaScript, Go, Postgresql</p>
+                        <p class="pt-1">Java, PHP, JavaScript, Go, PostgreSQL</p>
                     </div>
                 </div>
                 <div class="column">
@@ -159,5 +159,15 @@
         </section>
     </div>
 </section>
+<footer class="footer">
+    <div class="content has-text-centered">
+        <p class="mb-1">&copy;2022 <a href="https://www.linkedin.com/in/james-geer-b35527124/">James Geer</a>.</p>
+        <small>
+            <a href="mailto:jg680@kent.ac.uk">Email Me</a> -
+            <a href="https://github.com/jamesgeer/comp6000-recruitment">Source Code</a> -
+            <a href="https://github.com/jamesgeer">GitHub</a>
+        </small>
+    </div>
+</footer>
 </body>
 </html>
