--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                             </div>
                         </div>
                         <hr class="my-3">
-                        <p class="pt-1">Java, PHP, JavaScript, Go, PostgreSQL</p>
+                        <p class="pt-1">Java, PHP, JavaScript, Node.js, Python, Go, SQL</p>
                     </div>
                 </div>
                 <div class="column">
