oxford comma and spacing

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </header>
 <section class="section">
     <div class="container">
-        <section class="section pb-2">
+        <section class="section pb-2 pt-0">
             <h2 class="title is-spaced">Introduction</h2>
             <h3 class="subtitle">
                 Are you a motivated and hardworking individual who is tired of being in “solo” groups where you feel
@@ -39,7 +39,7 @@
             </h3>
         </section>
         <section class="section pb-2">
-            <h2 class="title is-spaced">Technical</h2>
+            <h2 class="title is-spaced">The Project</h2>
             <h3 class="subtitle">
                 Although we have not yet decided on a project initiative, being familiar with Java is a must,
                 alongside Gitlab, Git, and a database language (SQL). If you have any weaknesses with these we
@@ -123,12 +123,12 @@
                                     I have over four years of experience working as a Full-stack developer at a
                                     Web Agency and two of those years I spent as a Graphic Designer. I grew to love
                                     coding after suffering at its wrath for so long, and now I’ve been consumed by it.
-                                    Talk to me about functional programming, Japan or how much you hate JavaScript.
+                                    Talk to me about functional programming, Japan, or how much you hate JavaScript.
                                 </p>
                             </div>
                         </div>
                         <hr class="my-3">
-                        <p class="pt-1">Java, PHP, JavaScript, Node.js, Python, Go, SQL</p>
+                        <p class="pt-1">Java, PHP, JavaScript, Python, Go, SQL</p>
                     </div>
                 </div>
                 <div class="column">
