fixing text, added "the project" section

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 We are a laid-back group who are trying to achieve the best possible grade for our degree.
                 We understand that everyone has their strengths and weaknesses, and we want to use our individual
                 strengths to make the team stronger by bouncing ideas off each other; sharing thoughts that we had not
-                yet considered; and introducing a language or concept that opens a blocked passage.
+                yet considered.
             </h3>
             <h3 class="subtitle">
                 You do not need to be an expert programmer to join our team. We instead are looking for someone who
@@ -35,16 +35,21 @@
                 to know: “I do not quite understand this, I am going to learn how this works”; someone who is
                 open-minded to others' ideas and new technologies. But most of all, to strive to do their very best
                 to get the highest mark that they can possibly attain. We want to support each other so that we can
-                all succeed, but only if you are willing to put in your weight.
+                all succeed, but only if you are willing to pull your weight.
             </h3>
         </section>
         <section class="section pb-2">
             <h2 class="title is-spaced">The Project</h2>
             <h3 class="subtitle">
-                Although we have not yet decided on a project initiative, being familiar with Java is a must,
-                alongside Gitlab, Git, and a database language (SQL). If you have any weaknesses with these we
-                expect you to let us know so we can provide training if required. Commits should be well named,
-                small, and frequent.
+                Using <a href="https://www.typescriptlang.org/">TypeScript</a> and <a href="https://nodejs.org/en/about/">Node.js</a>,
+                we will be heavily expanding the feature set of an existing open-source
+                project, which is currently being maintained by a CompSci lecturer. These tasks will involve working
+                with APIs, Web Scraping, UI Improvement, Database Integration, Automation, and more.
+            </h3>
+            <h3 class="subtitle">
+                This project touches upon every level of the JavaScript tech stack, giving you an exciting and
+                diverse set of problems to solve, while also giving you a very valuable, and marketable skill set
+                for when you graduate.
             </h3>
         </section>
         <section class="section pb-2">
@@ -122,7 +127,7 @@
                                 <p>
                                     I have over four years of experience working as a Full-stack developer at a
                                     Web Agency and two of those years I spent as a Graphic Designer. I grew to love
-                                    coding after suffering at its wrath for so long, and now I’ve been consumed by it.
+                                    coding after suffering from its wrath for so long, and now I’ve been consumed by it.
                                     Talk to me about functional programming, Japan, or how much you hate JavaScript.
                                 </p>
                             </div>
