titles coloured, updated technical section, updated desirable skills

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <section class="section">
     <div class="container">
         <section class="section pb-2 pt-0">
-            <h2 class="title is-spaced">Introduction</h2>
+            <h2 class="title has-text-info is-spaced">Introduction</h2>
             <h3 class="subtitle">
                 Are you a motivated and hardworking individual who is tired of being in “solo” groups where you feel
                 like you are the only one doing any work? Well, we’re looking for you!
@@ -39,7 +39,7 @@
             </h3>
         </section>
         <section class="section pb-2">
-            <h2 class="title is-spaced">The Project</h2>
+            <h2 class="title has-text-info is-spaced">Project</h2>
             <h3 class="subtitle">
                 Using <a href="https://www.typescriptlang.org/">TypeScript</a> and <a href="https://nodejs.org/en/about/">Node.js</a>,
                 we will be heavily expanding the feature set of an existing open-source
@@ -53,7 +53,25 @@
             </h3>
         </section>
         <section class="section pb-2">
-            <h2 class="title is-spaced">Required Skills</h2>
+            <h2 class="title has-text-info is-spaced">Technical</h2>
+            <h3 class="subtitle">
+                We will be using the following languages and technologies:
+            </h3>
+            <div class="content is-medium">
+                <ul>
+                    <li>TypeScript, Node.js, HTML/CSS</li>
+                    <li>SQL, JSON</li>
+                    <li>Git, GitHub, GitHub Actions</li>
+                </ul>
+            </div>
+            <h3 class="subtitle">
+                The above is not a comprehensive list as additional packages and libraries will also be used,
+                but broadly, an understanding of JavaScript and having the ability to read the documentation
+                (or StackOverFlow), should be enough.
+            </h3>
+        </section>
+        <section class="section pb-2">
+            <h2 class="title has-text-info is-spaced">Required Skills</h2>
             <div class="content is-medium">
                 <ul>
                     <li>
@@ -76,12 +94,13 @@
             </div>
         </section>
         <section class="section pb-2">
-            <h2 class="title is-spaced">Desirable Skills</h2>
+            <h2 class="title has-text-info is-spaced">Desirable Skills</h2>
             <div class="content is-medium">
                 <ul>
-                    <li>Expected to achieve a merit or higher for the second year.</li>
+                    <li>Expected to achieve a 2:1 or greater for the second year.</li>
+                    <li>Strong knowledge of JavaScript, TypeScript, or Node.js.</li>
                     <li>Proficient in solving problems through the use of Google, Udemy, Youtube, etc.</li>
-                    <li>Experience of working on personal projects and achieving a personal goal.</li>
+                    <li>Passion for completing personal projects to achieve a personal goal.</li>
                     <li>Any artistic skills such as Graphic Design and experience with a design tool such as Photoshop, InDesign, GIMP, etc.</li>
                     <li>Able to work as a team and build a rapport with other team members.</li>
                     <li>Motivated to keep going even when the problem consumes your very being.</li>
@@ -89,7 +108,7 @@
             </div>
         </section>
         <section class="section pb-2">
-            <h2 class="title is-spaced">Contact</h2>
+            <h2 class="title has-text-info is-spaced">Contact</h2>
             <h3 class="subtitle">
                 If you are interested in joining our group then please send me a message on WhatsApp using this
                 <a href="https://api.whatsapp.com/send?phone=7788274558">link</a>,
@@ -98,7 +117,7 @@
             </h3>
         </section>
         <section class="section pb-2">
-            <h2 class="title is-spaced">The Team</h2>
+            <h2 class="title has-text-info is-spaced">The Team</h2>
             <div class="columns">
                 <div class="column">
                     <div class="box">
@@ -112,12 +131,12 @@
                                 <div class="is-flex is-justify-content-space-between pb-1">
                                     <h4 class="subtitle has-text-weight-bold mb-1">James Geer</h4>
                                     <div>
-                                        <a href="https://github.com/jamesgeer">
+                                        <a class="has-text-link" href="https://github.com/jamesgeer">
                                             <span class="icon">
                                               <i class="fa-brands fa-github"></i>
                                             </span>
                                         </a>
-                                        <a href="https://www.linkedin.com/in/james-geer-b35527124/">
+                                        <a class="has-text-link" href="https://www.linkedin.com/in/james-geer-b35527124/">
                                             <span class="icon">
                                               <i class="fa-brands fa-linkedin"></i>
                                             </span>
