fixed images not showing

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <div class="columns">
                             <div class="column is-one-quarter">
                                 <figure class="image">
-                                    <img class="is-rounded" src="https://media-exp1.licdn.com/dms/image/C4D03AQGhG4VF-s48Pw/profile-displayphoto-shrink_200_200/0/1604920417100?e=1655337600&v=beta&t=sxeOOHyQ1rDV3yj4bogYjEaToi-3X504-b01zrn7Ju0">
+                                    <img class="is-rounded" src="./assets/james.jpg">
                                 </figure>
                             </div>
                             <div class="column">
@@ -160,7 +160,7 @@
                         <div class="columns">
                             <div class="column is-one-quarter">
                                 <figure class="image">
-                                    <img class="is-rounded" src="https://pps.whatsapp.net/v/t61.24694-24/161327510_6096845417024669_8606270748330692273_n.jpg?ccb=11-4&oh=f01ffba4b076ce5b45a2e70f1b4fea42&oe=6264CB70">
+                                    <img class="is-rounded" src="./assets/isabel.jpg">
                                 </figure>
                             </div>
                             <div class="column">
