--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Primary Meta Tags -->
+    <title>COMP6000 Group Project 2022/23</title>
+    <meta name="title" content="COMP6000 Group Project 2022/23">
+    <meta name="description" content="An open-source project utilising APIs, Web Scraping, Database Integration, Automation, and more.">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://jamesgeer.github.io/comp6000-recruitment/">
+    <meta property="og:title" content="COMP6000 Group Project 2022/23">
+    <meta property="og:description" content="An open-source project utilising APIs, Web Scraping, Database Integration, Automation, and more.">
+    <meta property="og:image" content="./assets/meta.jpg">
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://jamesgeer.github.io/comp6000-recruitment/">
+    <meta property="twitter:title" content="COMP6000 Group Project 2022/23">
+    <meta property="twitter:description" content="An open-source project utilising APIs, Web Scraping, Database Integration, Automation, and more.">
+    <meta property="twitter:image" content="./assets/meta.jpg">
     <title>Join Our Team</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👋</text></svg>">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/brands.min.css">
