text for Brandon added

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                                     <img class="is-rounded" src="./assets/james.jpg">
                                 </figure>
                             </div>
-                            <div class="column">
+                            <div class="column is-half">
                                 <div class="is-flex is-justify-content-space-between pb-1">
                                     <h4 class="subtitle has-text-weight-bold mb-1">James Geer</h4>
                                     <div>
@@ -193,6 +193,31 @@
                         </div>
                         <hr class="my-3">
                         <p class="pt-1">Java, PHP, JavaScript, CSS/HTML</p>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="box">
+                        <div class="columns">
+                            <div class="column is-one-quarter">
+                                <figure class="image">
+                                    <img class="is-rounded" src="./assets/x.jpg">
+                                </figure>
+                            </div>
+                            <div class="column">
+                                <div class="is-flex is-justify-content-space-between pb-1">
+                                    <h4 class="subtitle has-text-weight-bold mb-1">Brandon Scott</h4>
+                                    <div></div>
+                                </div>
+                                <p>
+                                    I first discovered programming when I started my GCSE using Python, progressing
+                                    onto A-levels and now this degree. I enjoy being active and working as part of a
+                                    team and when I’m not bashing my head against compilation errors
+                                    I’m outside playing football within my league.
+                                </p>
+                            </div>
+                        </div>
+                        <hr class="my-3">
+                        <p class="pt-1">Python, Java, JavaScript, SQL</p>
                     </div>
                 </div>
             </div>
