--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
         </section>
         <section class="section pb-2">
             <h2 class="title has-text-info is-spaced">The Team</h2>
-            <div class="columns">
-                <div class="column">
+            <div class="columns is-multiline">
+                <div class="column is-half">
                     <div class="box">
                         <div class="columns">
                             <div class="column is-one-quarter">
@@ -142,7 +142,7 @@
                                     <img class="is-rounded" src="./assets/james.jpg">
                                 </figure>
                             </div>
-                            <div class="column is-half">
+                            <div class="column">
                                 <div class="is-flex is-justify-content-space-between pb-1">
                                     <h4 class="subtitle has-text-weight-bold mb-1">James Geer</h4>
                                     <div>
@@ -170,7 +170,7 @@
                         <p class="pt-1">Java, PHP, JavaScript, Python, Go, SQL</p>
                     </div>
                 </div>
-                <div class="column">
+                <div class="column is-half">
                     <div class="box">
                         <div class="columns">
                             <div class="column is-one-quarter">
@@ -195,12 +195,12 @@
                         <p class="pt-1">Java, PHP, JavaScript, CSS/HTML</p>
                     </div>
                 </div>
-                <div class="column">
+                <div class="column is-half">
                     <div class="box">
                         <div class="columns">
                             <div class="column is-one-quarter">
                                 <figure class="image">
-                                    <img class="is-rounded" src="./assets/x.jpg">
+                                    <img class="is-rounded" src="./assets/brandon.jpg">
                                 </figure>
                             </div>
                             <div class="column">
@@ -210,8 +210,8 @@
                                 </div>
                                 <p>
                                     I first discovered programming when I started my GCSE using Python, progressing
-                                    onto A-levels and now this degree. I enjoy being active and working as part of a
-                                    team and when I’m not bashing my head against compilation errors
+                                    onto A-level and now this degree. I enjoy being active and working as part of a
+                                    team and when I’m not bashing my head against compilation errors,
                                     I’m outside playing football within my league.
                                 </p>
                             </div>
