mystery person added

--- a/index.html
+++ b/index.html
@@ -220,6 +220,27 @@
                         <p class="pt-1">Python, Java, JavaScript, SQL</p>
                     </div>
                 </div>
+                <div class="column is-half">
+                    <div class="box">
+                        <div class="columns">
+                            <div class="column is-one-quarter">
+                                <figure class="image">
+                                    <img class="is-rounded" src="./assets/mystery.jpg">
+                                </figure>
+                            </div>
+                            <div class="column">
+                                <div class="is-flex is-justify-content-space-between pb-1">
+                                    <h4 class="subtitle has-text-weight-bold mb-1">You</h4>
+                                    <div></div>
+                                </div>
+                                <p>
+                                    Interesting in joining the team? This could be you.
+                                </p>
+                            </div>
+                        </div>
+                        <p class="pt-1"></p>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
