--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                                     <div></div>
                                 </div>
                                 <p>
-                                    Interesting in joining the team? This could be you.
+                                    Interested in joining the team? This could be you.
                                 </p>
                             </div>
                         </div>
